k8s/apps/asmaa-portfolio/base/deployment.yaml
# Because your current Dockerfile uses regular NGINX on port 80, the container port is also 80.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asmaa-portfolio
  labels:
    app: asmaa-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asmaa-portfolio
  template:
    metadata:
      labels:
        app: asmaa-portfolio
    spec:
      containers:
        - name: asmaa-portfolio
          image: asmaa-portfolio:local
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
