k8s/apps/asmaa-portfolio/base/service.yaml
# This creates an internal Kubernetes Service.

# Traffic flow:

# Service port 80
# → Pod/container port 80
# → NGINX serves index.html

apiVersion: v1
kind: Service
metadata:
  name: asmaa-portfolio
  labels:
    app: asmaa-portfolio
spec:
  type: ClusterIP
  selector:
    app: asmaa-portfolio
  ports:
    - name: http
      port: 80
      targetPort: 80
