k8s/apps/asmaa-portfolio/base/httproute-envoy-asmaa.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: asmaa-portfolio-route
  namespace: portfolio-asmaa
spec:
  parentRefs:
    - name: launchmywork-gateway
      namespace: platform-envoy-gateway
  hostnames:
    - asmaa.launchmywork.com
  rules:
    - backendRefs:
        - name: asmaa-portfolio
          port: 80
